fixed overflow bog

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -108,3 +108,6 @@ body {
 .list-style{
   direction: rtl;
 }
+.o{
+  overflow-y: hidden;
+}
